cmake_minimum_required(VERSION 3.10)
project(proj_c C)

set(CMAKE_C_STANDARD 11)
find_package(PythonLibs 2.7 REQUIRED)
include_directories(${PYTHON_INCLUDE_DIRS})
add_library(proj_algo SHARED main.c)
add_executable(proj_c main.c)
target_link_libraries(proj_algo python2.7)
target_link_libraries(proj_c python2.7)