cmake_minimum_required(VERSION 3.10)
project(proj_c C)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_FLAGS -std=c11 -lm)
find_package(PythonLibs 2.7 REQUIRED)
include_directories(${PYTHON_INCLUDE_DIRS})
add_library(proj_algo SHARED main.c head_tail.h)
add_executable(proj_c main.c head_tail.h)
add_executable(test_dfs_tour test_dfs_tour.c head_tail.h)
add_executable(test_fast_pcst test_fast_pcst.c fast_pcst.h)
add_executable(test_pairing_heap test_pairing_heap.c pairing_heap.h)
target_link_libraries(test_dfs_tour -lm)
target_link_libraries(proj_algo python2.7)
target_link_libraries(proj_c python2.7)