cmake_minimum_required(VERSION 3.0)
project(sparse_learning)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS -std=c11 -lm -ffast-math)
set(OPENBLAS_INCLUDE /network/rit/lab/ceashpc/bz383376/opt/openblas-0.3.1/include/)
set(OPENBLAS_LIB /network/rit/lab/ceashpc/bz383376/opt/openblas-0.3.1/lib/)
add_executable(test_loss_func loss_func_test.c loss_func.c loss_func.h)
target_link_libraries(test_loss_func -I${OPENBLAS_INCLUDE} -L${OPENBLAS_LIB} -lm -lopenblas)