cmake_minimum_required(VERSION 3.0)
project(sparse_learning)
add_subdirectory(src/)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS -std=c11 -lm -ffast-math)
set(PYTHON_INCLUDE_DIRS /usr/include/python2.7)
set(BLAS_INCLUDE_DIRS /usr/local/openblas/include)
set(PYTHON_LIBRARIES /usr/lib/x86_64-linux-gnu/libpython2.7.so)
include_directories(${PYTHON_INCLUDE_DIRS})
include_directories(${BLAS_INCLUDE_DIRS})
add_library(openblas STATIC IMPORTED)
set_target_properties(openblas PROPERTIES IMPORTED_LOCATION "/usr/local/openblas/lib/libopenblas.so")
add_executable(lasso lasso.c)
add_executable(fast_pcst fast_pcst.c)
add_executable(pqueue pqueue.c)
add_executable(test_openblas test_openblas.c)
add_executable(online_graph_ghtp online_graph_ghtp.c)
target_link_libraries(test_openblas openblas)
target_link_libraries(lasso openblas python2.7)
target_link_libraries(test_openblas openblas)
target_link_libraries(online_graph_ghtp openblas python2.7 -lm -ffast-math)